force-app/main/default/objects/Related_Agent__c/Related_Agent__c.object-meta.xml
<CustomObject>
    <description>Tracks relationships between personal assistants and brokers or appraisers</description>
    <label>Related Agent</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>RelatedAgentID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Agents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>