force-app/main/default/objects/Related_Agent__c/fields/Assistant_to__c.field-meta.xml
<CustomField>
    <fullName>Assistant_to__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assistant to</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>My Assistants</relationshipLabel>
    <relationshipName>Related_Agents</relationshipName>
    <type>Lookup</type>
</CustomField>