force-app/main/default/objects/Related_Agent__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <formula>Subscription__r.Contact__r.FirstName &amp;&quot; &quot; &amp; Subscription__r.Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact</label>
    <type>Text</type>
</CustomField>