force-app/main/default/objects/Related_Agent__c/fields/MDS_Status__c.field-meta.xml
<CustomField>
    <fullName>MDS_Status__c</fullName>
    <label>MDS Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>