force-app/main/default/objects/Related_Agent__c/fields/PA_Subscription_Type__c.field-meta.xml
<CustomField>
    <fullName>PA_Subscription_Type__c</fullName>
    <formula>TEXT(Personal_Assistant_Sub_ID__r.Subscription_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subscription Type</label>
    <type>Text</type>
</CustomField>