force-app/main/default/objects/Related_Agent__c/fields/Personal_Assistant__c.field-meta.xml
<CustomField>
    <fullName>Personal_Assistant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Personal Assistant</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Agents I Assist</relationshipLabel>
    <relationshipName>Related_Agents1</relationshipName>
    <type>Lookup</type>
</CustomField>