force-app/main/default/objects/Related_Agent__c/fields/PrismRelatedAgentID__c.field-meta.xml
<CustomField>
    <fullName>PrismRelatedAgentID__c</fullName>
    <label>PrismRelatedAgentID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>