force-app/main/default/objects/Related_Agent__c/fields/Subscription__c.field-meta.xml
<CustomField>
    <fullName>Subscription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assistant to Sub ID</label>
    <referenceTo>Subscriptions__c</referenceTo>
    <relationshipLabel>Related Agents</relationshipLabel>
    <relationshipName>Related_Agents</relationshipName>
    <type>Lookup</type>
</CustomField>