force-app/main/default/objects/Related_Agent__c/fields/Subscription_Type__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Type__c</fullName>
    <formula>TEXT(Subscription__r.Subscription_Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subscription Type</label>
    <type>Text</type>
</CustomField>