force-app/main/default/objects/Related_Agent__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Assistant_to__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Personal_Assistant__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>